# app/Models/Bill.php
@@ -8,5 +8,27 @@ use Illuminate\Database\Eloquent\Model;
 class Bill extends Model
 {
     use HasFactory;
-    
+
+    protected $fillable = [
+        'uid',
+        'fees',
+        'price',
+        'status',
+        'user_id',
+        'reference',
+        'volume1_sms',
+        'volume2_sms',
+    ];
+
+    // Génération de UUID unique
+    protected static function boot()
+    {
+        parent::boot();
+
+        static::creating(function ($model) {
+            if (empty($model->uid)) {
+                $model->uid = Str::uuid()->toString();
+            }
+        });
+    }
 }
